<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alockwood.themedbuttons.MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/light_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_themed_default_button"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <Button
            android:id="@+id/light_button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_themed_accent_button"/>

        <Button
            android:id="@+id/light_button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_themed_custom_accent_button"
            android:textColor="@color/colored_button_text_color_light"
            android:theme="@style/LightAccentRedButtonTheme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/light_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/light_themed_custom_accent_button"
            android:textColor="@color/colored_button_text_color_light"
            app:backgroundTint="@color/colored_button_background_tint"/>

        <Button
            android:id="@+id/dark_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_themed_default_button"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <Button
            android:id="@+id/dark_button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_themed_accent_button"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <Button
            android:id="@+id/dark_button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_themed_custom_accent_button"
            android:textColor="@color/colored_button_text_color_light"
            android:theme="@style/DarkAccentRedButtonTheme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dark_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dark_themed_custom_accent_button"
            android:textColor="@color/colored_button_text_color_light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:backgroundTint="@color/colored_button_background_tint"/>

    </LinearLayout>

</ScrollView>